Thu Sep 18 22:00:16 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ManualAssertLiveliness/DataWriterListenerImpl.cpp:
        * tests/DCPS/ManualAssertLiveliness/publisher.cpp:

          Fix copy and paste errors in nil checks and logging.

        * tests/DCPS/ManualAssertLiveliness/pub.ini:
        * tests/DCPS/ManualAssertLiveliness/sub.ini:

          Make ini file more standard - add TCP transport, set
          DCPSGlobalTransportConfig.

Thu Sep 18 21:47:51 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Ownership/publisher.cpp:

          Restore call to wait_ack().

        * tests/DCPS/Ownership/sub.ini:
        * tests/DCPS/Ownership/pub.ini:

          Make ini file more standard - add TCP transport, set
          DCPSGlobalTransportConfig.  Was loading UDP in static
          builds.

Thu Sep 18 18:49:53 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Ownership/DataReaderListener.cpp:

          take_next_sample() in a loop.

        * tests/DCPS/Ownership/publisher.cpp:

          Don't call wait_ack(), causing timeout in static builds.

Thu Sep 18 04:50:38 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Ownership/DataReaderListener.cpp:

          Fix fuzz.

Wed Sep 17 21:44:28 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Publication.cpp:
        * dds/InfoRepo/DCPS_IR_Subscription.cpp:

          Redmine issue 1461 Logging incorrect after failed add_association() call.

Wed Sep 17 19:06:39 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/BitPubListenerImpl.cpp:

          In on_data_available(), call take_next_sample() in a loop,
          to get all samples in a timely manor.

        * dds/DCPS/DomainParticipantImpl.cpp:

          Call on_data_available() when attaching listener.

        * dds/DCPS/WriterInfo.h:
        * dds/DCPS/WriterInfo.cpp:

          Rename OwnerEvaluateFlag to OwnerEvaluateFlags.
