@@ -1,3 +1,9 @@
+Mon Sep 22 14:43:48 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tests/DCPS/UnitTests:
+        * tests/DCPS/UnitTests/UnitTests.mpc:
+        * tests/DCPS/UnitTests/ut_Reassembly.cpp:
+
 Thu Sep 18 22:00:16 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * tests/DCPS/ManualAssertLiveliness/DataWriterListenerImpl.cpp:
